--- a/resources/sass/templates/_toolbar.scss
+++ b/resources/sass/templates/_toolbar.scss
@@ -93,10 +93,9 @@
                 flex-direction: column;
                 pointer-events: all;
                 margin-bottom: 2px;
-                max-height: 50rem;
+                max-height: 50vh;
                 overflow: auto;
                 display: none;
-                
 
 				&.show {
 					display: flex;
